Thu Jun 12 04:38:01 UTC 2008  Ossama Othman  <othmano@ociweb.com>

        * tests/DCPS/Deadline/DataWriterListenerImpl.cpp
          (on_offered_deadline_missed):

          Fixed unused parameter warning.

Wed Jun 11 18:10:41 UTC 2008  Jonathan Pollack  <pollack_j@ociweb.com>

        * tests/DCPS/Lifespan/Lifespan.mpc:

          Added MPC file for this test.

Wed Jun 11 05:58:20 UTC 2008  Ossama Othman  <othmano@ociweb.com>

        * tests/DCPS/Lifespan/DataWriterListenerImpl.cpp:

          Fixed unused parameter warning.

Tue Jun 10 12:23:45 UTC 2008  Ossama Othman  <othmano@ociweb.com>

        * dds/DCPS/DataReaderImpl.cpp (data_expired):

          Corrected sense of data expiration check.  Future times were
          incorrectly checked instead of those in the past.

        * tests/DCPS/Lifespan:
        * tests/DCPS/Lifespan/DataReaderListener.cpp:
        * tests/DCPS/Lifespan/DataReaderListener.h:
        * tests/DCPS/Lifespan/DataWriterListenerImpl.cpp:
        * tests/DCPS/Lifespan/DataWriterListenerImpl.h:
        * tests/DCPS/Lifespan/domain_ids:
        * tests/DCPS/Lifespan/Messenger.idl:
        * tests/DCPS/Lifespan/pub.ini:
        * tests/DCPS/Lifespan/publisher.cpp:
        * tests/DCPS/Lifespan/README:
        * tests/DCPS/Lifespan/run_test.pl:
        * tests/DCPS/Lifespan/sub.ini:
        * tests/DCPS/Lifespan/subscriber.cpp:
        * tests/DCPS/Lifespan/tcp.conf:
        * tests/DCPS/Lifespan/Writer.cpp:
        * tests/DCPS/Lifespan/Writer.h:

          New LIFESPAN QoS policy test.

        * bin/dcps_tests.lst:

          Run LIFESPAN test in automated builds.

Tue Jun 10 10:58:34 UTC 2008  Ossama Othman  <othmano@ociweb.com>

        * tests/DCPS/Deadline/DataReaderListener.cpp:
        * tests/DCPS/Deadline/DataReaderListener.h:
        * tests/DCPS/Deadline/DataWriterListenerImpl.cpp:
        * tests/DCPS/Deadline/DataWriterListenerImpl.h:
        * tests/DCPS/Deadline/Deadline.mpc:
        * tests/DCPS/Deadline/domain_ids: